Fix nested scrollbar hover state.

--- a/packages/itwinui-css/src/global.scss
+++ b/packages/itwinui-css/src/global.scss
@@ -30,7 +30,7 @@
 // text selection and scrollbar styling on [data-iui-theme], iui-root and all elements under it
 :where([data-iui-theme]),
 :where(.iui-root),
-:where(.iui-root) * {
+:where(.iui-root *) {
   @include iui-text-selection;
   @include iui-scrollbar;
 }
